<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
      android:id="@+id/action_clear_all"
      android:icon="@drawable/ic_clear"
      android:orderInCategory="1"
      android:title="@string/action_clear_all"
      app:showAsAction="ifRoom" />

    <item
      android:id="@+id/action_instructions"
      android:orderInCategory="97"
      android:title="@string/action_instructions"
      app:showAsAction="never" />

    <item
      android:id="@+id/action_settings"
      android:orderInCategory="98"
      android:title="@string/action_settings"
      app:showAsAction="never" />

    <item
      android:id="@+id/help"
      android:orderInCategory="99"
      android:title="@string/action_help"
      app:showAsAction="never" />

    <item
      android:id="@+id/about"
      android:orderInCategory="100"
      android:title="@string/action_about"
      app:showAsAction="never" />

</menu>
